[gd_scene load_steps=16 format=2]

[ext_resource path="res://enemies/assets/gunner.png" type="Texture" id=1]
[ext_resource path="res://enemies/Gunner.gd" type="Script" id=2]
[ext_resource path="res://enemies/assets/gun.png" type="Texture" id=3]
[ext_resource path="res://enemies/Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/assets/gunshoot.ogg" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 21, 0, 21, 21 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 189, 0, 21, 21 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 210, 0, 21, 21 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "shooting",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walking",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 9.25, 4.75 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7, 10 )

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "walking"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.95 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 5 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 5 ), Vector2( 4, 5 ), Vector2( 6, 5 ) ]
}

[node name="Gunner" type="KinematicBody2D"]
script = ExtResource( 2 )
Bullet = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "walking"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.249995, 1.25 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 5 )

[node name="WalkRay" type="RayCast2D" parent="."]
position = Vector2( 8, 3 )
enabled = true
cast_to = Vector2( 5, 0 )
collide_with_areas = true

[node name="AimRay" type="RayCast2D" parent="."]
position = Vector2( 8, 3 )
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 16
collide_with_areas = true

[node name="FloorRay" type="RayCast2D" parent="."]
position = Vector2( 12, 9 )
enabled = true
cast_to = Vector2( 0, 5 )
collide_with_areas = true

[node name="GunSprite" type="Sprite" parent="."]
modulate = Color( 0.886275, 0.164706, 0.164706, 1 )
position = Vector2( 6, 5 )
scale = Vector2( 0.785714, 0.785714 )
texture = ExtResource( 3 )

[node name="GunAim" type="Node2D" parent="."]
position = Vector2( 11, 4 )

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="TurnTimer" type="Timer" parent="."]

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="SpriteAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../GunAnimationPlayer")
anims/RESET = SubResource( 13 )
anims/walking = SubResource( 12 )

[node name="GunAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/shoot = SubResource( 10 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
